fixing display on mobile

--- a/styles.css
+++ b/styles.css
@@ -582,4 +582,8 @@ form {
     font-size: 18px;
     cursor: pointer;
   }
+  
+  .add-task-popup {
+    width: 350px;
+  }
 }
